Issue #2790473 by aramboyajyan: Fix z-index issue with overlapping local menu tasks and fieldsets

--- a/css/style.css
+++ b/css/style.css
@@ -160,6 +160,8 @@ table th {
  ******************************************************************************/
 #page-title {
   background: #fff url(../images/bleeds.png) 0 -350px repeat-x;
+  z-index: 11;
+  position: relative;
 }
 #page-title .limiter {
   position: relative;
